[package]
name = "onelibrary-to-spotify-playlist"
version = "0.1.0"
edition = "2024"

[dependencies]
xml = "1.2.0"
roxmltree = "0.20"
chrono = "0.4.42"
rspotify = { version = "0.15.3", features = ["env-file","cli"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
dotenv = "0.15"